[package]
name = "lmap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
hostname = "0.4.0"
hwlocality = { git = "https://github.com/HadrienG2/hwlocality", features = ["hwloc-2_5_0"] }
regex = "1.10.4"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
which = "6.0.1"
yansi = { version = "1.0.1", features = ["detect-tty"] }
